tests/transpiler/x/java/str_builtin.error
exit status 1
Main.java:4: error: cannot find symbol
        System.out.println(str(123));
                           ^
  symbol:   method str(int)
  location: class Main
1 error
