tests/transpiler/x/java/str_builtin.java
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 06:28:31 UTC
public class Main {
    public static void main(String[] args) {
        System.out.println(str(123));
    }
}
